# Octamillia

./: .gitignore  LICENSE  README  README.md  main.py  pyproject.toml  setup_project.py  structure.txt
app/: __init__.py
app/body/: blood.py  body.py  interfaces.py
app/body/messaging/: __init__.py  hearth.py  in_memory_bus.py  kafka_bus.py  mq_bus.py
app/brain/: WAI.py  __init__.py  brain.py  dependency_provider.py  external_client.py  logger.py  models.py
app/gui/: gui.py  gui_func.py
app/gui/src/: 1.py  3.py  4.py
app/suckers/: base.py
app/suckers/outputs/: logger.py
app/suckers/transformers/: multiplier.py
app/suckers/validators/: int_validator.py
app/tentacles/: __init__.py  data_pipeline.py  pipeline_tentacle.py
app/tentacles/brokerage/: __init__.py  brokerage.py
app/tentacles/config_loader/: __init__.py  config_loader.py  config_loader_model.py
app/tentacles/video_sync/: __init__.py  video_sync.py  video_sync_model.py
config/: config.yaml
docs/: conf.py  index.rst  modules.rst
tests/: conftest.py  test_brain_routing.py  test_tentacles.py
