[project]
name = "octamillia"
version = "0.1.0"
description = ""
authors = [
    {name = "SolitarySpiral",email = "solitary.ratty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pybreaker (>=1.4.1,<2.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.5.2"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"


[tool.ruff]
# Длина строки (стандарт сейчас 88 или 100, 79 уже маловато)
line-length = 100
# Версия питона, под которую линтим
target-version = "py311"

[tool.ruff.lint]
# Какие правила включаем:
# E, W - стандартные ошибки (как в pycodestyle)
# F - pyflakes (баги, неиспользуемые переменные)
# I - isort (сортировка импортов - это киллер-фича!)
# B - flake8-bugbear (поиск неочевидных багов)
select = ["E", "W", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
# Группировать импорты правильно
known-first-party = ["app"]

[tool.pytest.ini_options]
# Указываем, что нужно добавить текущую директорию (корень проекта) в PYTHONPATH.
# Это позволяет импортировать пакеты из 'app'.
pythonpath = "." 
python_files = "test_*.py" # Указываем, какие файлы считать тестами
asyncio_mode = "auto"